# Task-Management-System

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py
alembic/versions/: b68b722cb4cc_init.py
app/: main.py
app/api/: auth.py  tasks.py  users.py
app/core/: config.py  security.py
app/db/: base.py  redis.py  session.py
app/middlewares/: auth.py
app/models/: __init__.py  task.py  user.py
app/repositories/: task.py  user.py
app/schemas/: task.py  user.py
app/services/: auth.py
app/tests/: conftest.py
app/tests/integrations/: test_auth.py  test_tasks.py
app/tests/units/: test_dummy.py
docs/: learning-plan.md
docs/notes/: 2026-03-16.md  2026-03-18.md  2026-03-22.md  2026-03-25.md
